# openai-response-api-demo

./: INSTALLATION.md  README.md  app.py  demo.py  demo_web_interface.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run_app.py  setup.py  test_import.py  test_tool_calling.py  tool_calling_example.py
.streamlit/: config.toml
src/openai_responses/: __init__.py  client.py  exceptions.py  models.py
